moved placement of news banner to fix issue where it covers content

--- a/src/style/global-news-banner.css
+++ b/src/style/global-news-banner.css
@@ -5,6 +5,8 @@
 }
 
 .global-news-banner {
+  margin-top: 60px;
+  margin-bottom: -60px;
   padding: 1em 4em;
   position: relative;
   text-align: center;
